feat(flexlb): add cache-aware runtime foundations
Squashes MUDV commits 1-8.

Add RPC/discovery wiring, KVCM/local-standby cache matching, worker lifecycle scheduling, observability hooks, PV replay tooling, and centralized runtime configuration support.